--- a/src/sass/components/_tabmask.scss
+++ b/src/sass/components/_tabmask.scss
@@ -30,24 +30,32 @@
       }
     }
     div {
-      display: flex;
       width: 96%;
       align-items: center;
       padding-left: r(20);
+      &:after {
+        content: ' ';
+        display: block;
+        visibility: hidden;
+        clear: both;
+        height: 0;
+      }
       h2 {
-        @include line_height(r(80));
         width: r(90);
         font-weight: normal;
-        font-size: $font-size-large;
+        font-size: $font-size-medium;
         color: $main-font-000;
+        float: left;
+        padding: r(10) 0;
       }
       span {
-        font-size: $font-size-xxsmall;
+        font-size: $font-size-xsmall;
         border-radius: 8px;
         border: 1px solid $search-item-d2d5dc;
         padding: r(6) r(10);
-        margin-right: r(20);
+        margin: r(10) r(20) r(10) 0;
         white-space: nowrap;
+        float: left;
       }
       .search_active {
         background-color: $search-active-back-dcedff;
