--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,20 +1,34 @@
-@import
-"base/index",
+@import "base/index",
 "components/slider",
 "components/tab",
-"components/tabmask"
-;
-body{
+"components/tabmask",
+"components/classadvance";
+
+body {
   background-color: $background-f5f5f5;
   margin: 0 auto;
 }
-.loading{
+
+.loading {
   width: 100%;
   text-align: center;
   margin-top: r(10);
-  .desc{
+  .desc {
     line-height: 20px;
     font-size: $font-size-small;
     color: $main-font-000;
   }
+}
+
+.dropload-down {
+  font-size: $font-size-small;
+  color: $assist-font-b2b2b2;
+  text-align: center;
+  padding: r(20) 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.live_img{
+  border-radius: 0!important;
 }
