--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -11,6 +11,9 @@ $background-ff3600: #ff3600;
 $background-ff3a5f: #ff3a5f;
 $background-ff405f: #ff405f;
 $tag-active-92c0f1: #92c0f1;
+$center-4aa1ff: #4aa1ff;
+$background-95cfff: #95cfff;
+$border-535659: #535659;
 
 // 字体颜色
 $main-font-000: #000;
@@ -23,6 +26,7 @@ $font-999: #999;
 
 // 盒子阴影
 $box-shadow-ebeded: #ebeded;
+$box-shadow-e3e3e3: #e3e3e3;
 // 搜索结果边框
 $search-border-c4c4c4: #c4c4c4;
 // 搜索结果条目边框
