--- a/src/sass/components/_tab.scss
+++ b/src/sass/components/_tab.scss
@@ -1,3 +1,6 @@
+#home_advance{
+  padding-bottom: $nav-height;
+}
 // 选项卡
 #tab {
   overflow: hidden;
@@ -169,7 +172,6 @@
             }
           }
         }
-
       }
     }
   }
