--- a/src/sass/components/_tabmask.scss
+++ b/src/sass/components/_tabmask.scss
@@ -14,19 +14,21 @@
     .tab_mask_remind {
       @include line_height(r(60));
       font-weight: 500;
-      font-size: $font-size-large;
+      font-size: $font-size-medium;
       color: $main-font-000;
       text-indent: r(20);
       display: flex;
       align-items: center;
+      background-color: $search-active-back-dcedff;
       &:after {
         display: block;
         content: '';
+        margin-left: r(2);
         background-image: url("https://cdn2.qnzsvk.cn/static/20170915/images/homepage_filtrate_img@2x.png");
         background-repeat: no-repeat;
         background-size: cover;
-        width: r(40);
-        height: r(40);
+        width: r(32);
+        height: r(32);
       }
     }
     div {
