--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -23,6 +23,7 @@ $content-font-666: #666;
 $intersperse-font-76b8ff: #76b8ff;
 $other-font-0069ea: #0069ea;
 $font-999: #999;
+$money-ff5474: #ff5474;
 
 // 盒子阴影
 $box-shadow-ebeded: #ebeded;
