--- a/src/sass/personal.scss
+++ b/src/sass/personal.scss
@@ -1,4 +1,5 @@
 @import "base/index",
 "components/common",
 "components/personal",
-"components/bottomnav";
+"components/bottomnav",
+"components/mask";
