--- a/src/sass/components/_common.scss
+++ b/src/sass/components/_common.scss
@@ -19,31 +19,26 @@ body {
     width: 100%;
     .rules_content {
       position: absolute;
-      background: url("./../images/popup_coupon_bgimg@2x.png") no-repeat;
-      background-size: cover;
       width: r(500);
       height: r(600);
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
       -webkit-transform: translate(-50%, -50%);
-      img {
-        float: right;
-        margin-top: r(-28);
-        margin-right: r(-28);
+      .close_btn {
+        position: absolute;;
+        top: r(-28);
+        right: r(-28);
         width: r(96);
         height: r(96);
+        z-index: 10;
       }
       .get_rules {
-        margin-top: 45%;
-        display: flex;
-        flex-direction: column;
-        span {
-          margin-top: r(16);
-          color: $main-font-000;
-          font-size: $font-size-medium;
-          text-align: center;
-        }
+        width: 100%;
+        height:100%;
+        position: absolute;
+        top: 0;
+        left:0;
       }
       .go_share {
         display: block;
