--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -13,6 +13,7 @@ $background-ff405f: #ff405f;
 $tag-active-92c0f1: #92c0f1;
 $center-4aa1ff: #4aa1ff;
 $background-95cfff: #95cfff;
+$background-mask:rgba(0,0,0,0.5);
 $border-535659: #535659;
 
 // 字体颜色
